--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,25 @@
+# PlatformIO
 .pio
 .vscode/.browse.c_cpp.db*
 .vscode/c_cpp_properties.json
 .vscode/launch.json
 .vscode/ipch
+
+# Environment & Config
+.env
+include/config.h
+
+# Python
+__pycache__/
+*.pyc
+*.pyo
+server/__pycache__/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# IDE
+*.swp
+*.swo
+*~
