--- a/server/.env.example
+++ b/server/.env.example
@@ -1,8 +1,10 @@
 # ===========================================
 # Ví dụ cấu hình - Copy thành .env và chỉnh sửa
+# Environment Configuration Example - Copy to .env and edit
 # ===========================================
 
 # Địa chỉ IP của PC (tự động phát hiện nếu để trống)
+# IP ADRESS of the PC (leave empty = auto-detect)
 PC_IP_ADDRESS=
 
 # Server Configuration
@@ -11,4 +13,5 @@ SERVER_PORT=8080
 LIBRE_HW_MONITOR_PORT=8085
 
 # Giới hạn số disk tối đa
+# Maximum number of disks
 MAX_DISKS=2
