--- a/platformio.ini
+++ b/platformio.ini
@@ -14,4 +14,6 @@ board = esp12e
 framework = arduino
 lib_deps = 
     bblanchon/ArduinoJson@^6.21.3
+    adafruit/Adafruit ST7735 and ST7789 Library@^1.10.0
+    adafruit/Adafruit GFX Library@^1.11.3
 monitor_speed = 115200
