--- a/platformio.ini
+++ b/platformio.ini
@@ -16,4 +16,5 @@ lib_deps =
     bblanchon/ArduinoJson@^6.21.3
     adafruit/Adafruit ST7735 and ST7789 Library@^1.10.0
     adafruit/Adafruit GFX Library@^1.11.3
+    tzapu/WiFiManager@^2.0.16-rc.2
 monitor_speed = 115200
