--- a/platformio.ini
+++ b/platformio.ini
@@ -12,9 +12,11 @@
 platform = espressif8266
 board = esp12e
 framework = arduino
+upload_speed = 921600
+monitor_speed = 115200
 lib_deps = 
     bblanchon/ArduinoJson@^6.21.3
     adafruit/Adafruit ST7735 and ST7789 Library@^1.10.0
     adafruit/Adafruit GFX Library@^1.11.3
     tzapu/WiFiManager@^2.0.16-rc.2
-monitor_speed = 230400
+
