--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,16 @@ board = esp12e
 framework = arduino
 upload_speed = 921600
 monitor_speed = 115200
+
+; Disable ESP8266 boot messages
+monitor_filters = 
+    default
+    esp8266_exception_decoder
+
+; Build flags to reduce verbosity
+build_flags = 
+    -DWIFI_MANAGER_DISABLE_STARTUP_CONFIG_PORTAL
+    
 lib_deps = 
     bblanchon/ArduinoJson@^6.21.3
     adafruit/Adafruit ST7735 and ST7789 Library@^1.10.0
