{Ver1.8.4} feat: Add support for ILI9341 display and improve initialization handling

--- a/platformio.ini
+++ b/platformio.ini
@@ -26,7 +26,9 @@ build_flags =
     
 lib_deps = 
     bblanchon/ArduinoJson@^6.21.3
-    adafruit/Adafruit ST7735 and ST7789 Library@^1.10.0
     adafruit/Adafruit GFX Library@^1.11.3
+    adafruit/Adafruit ST7735 and ST7789 Library@^1.10.0
+    adafruit/Adafruit ILI9341@^1.6.0
     tzapu/WiFiManager@^2.0.16-rc.2
+    ; Note: For GC9A01, ILI9486, ST7796 - install manually or use TFT_eSPI library
 
