--- a/include/config.h.example
+++ b/include/config.h.example
@@ -28,7 +28,41 @@
 #define OTA_PASSWORD ""               // OTA password (empty = no password)
 
 // ===== TFT Display Configuration =====
-#define TFT_ST7735    // 128x160 (phổ biến nhất)
+// Choose ONE display type (uncomment the one you have):
+
+// ===== Supported Displays (with Adafruit libraries) =====
+// ST7735 - Small displays (1.44" - 1.8")
+#define TFT_ST7735    // Default: 1.8" 160x128 or 128x160
+// #define ST7735_INITR INITR_BLACKTAB   // Black tab (default)
+// #define ST7735_INITR INITR_REDTAB     // Red tab  
+// #define ST7735_INITR INITR_GREENTAB   // Green tab
+// #define ST7735_INITR INITR_144GREENTAB // 1.44" 128x128 Green tab
+
+// ST7789 - Medium displays (1.3" - 2.4")
+// #define TFT_ST7789    // 1.3" 240x240, 1.54" 240x240, 2.0" 240x320, 2.4" 240x320
+
+// ILI9341 - Popular medium size (2.2" - 2.8")
+// #define TFT_ILI9341   // 2.2" 240x320, 2.4" 240x320, 2.8" 240x320
+
+// ===== Screen Dimensions (Optional) =====
+// Uncomment and set for your specific screen (auto-detected if not set)
+// Common sizes:
+// 1.44" ST7735:    128x128 (INITR_144GREENTAB)
+// 1.8" ST7735:     128x160 or 160x128
+// 1.3" ST7789:     240x240
+// 2.0" ST7789:     240x320
+// 2.4" ST7789:     240x320
+// 2.2" ILI9341:    240x320
+// 2.4" ILI9341:    240x320
+// 2.8" ILI9341:    240x320
+
+// #define TFT_WIDTH  128
+// #define TFT_HEIGHT 160
+
+// Note: For other displays (GC9A01, ILI9486, ST7796), you need to:
+// 1. Install the appropriate library manually
+// 2. Update display_manager.h and display_manager.cpp
+// 3. Or use TFT_eSPI universal library instead
 
 // Chân kết nối TFT (SPI) - Theo sơ đồ đấu nối của bạn
 #define TFT_CS    D8   // GPIO 15
